# LMHI-back

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  alembic.ini  main.py  main_requests.py  pyproject.toml  requirements.txt  wsgi.py
data/: __all_models.py  auth_sessions.py  db_session.py  green.txt  habit_names.py  habits.py  habits_names_resourses.py  habits_resourses.py  load_texts.py  main.txt  models.py  mood_diaries.py  mood_diary_scales.py  mood_notes.py  mood_notes_resource.py  mood_notes_resourses.py  mood_scales.py  mood_scales_resource.py  mood_scales_resourses.py  parse text.py  red.txt  service_resourse.py  session_check.py  test_results.py  text_data.py  text_data_resourses.py  users.py  users_resourses.py  yellow.txt
data/handlers/: beta_habit_resource.py  habits_names_resourses.py  habits_resourses.py  mood_criteria_resource.py  mood_diary_resource.py  mood_notes_resourses.py  mood_scales_resourses.py  service_resourse.py  (+3 more)
handlers/: __init__.py  habit.py  habit_diary.py  interpretation.py  mood_criteria.py  mood_diary.py  service.py  test_results.py  text_data.py  users.py
models/: __init__.py  habit.py  habit_note.py  mood_criteria.py  mood_diary.py  mood_note.py  session.py  test_result.py  text_data.py  user.py
request_schema/: habit.py  habit_diary.py  mood_criteria.py  mood_diary.py  test_result.py
service/: db_session.py  load_data.py  load_habits.py  load_texts.py  session_check.py
service_schemas/: add_test_result_example.json  load_habits.json  load_texts.json
texts/: green.txt  main.txt  red.txt  yellow.txt
(+37 files in other folders)
