[tool.poetry]
name = "lmhi-back"
version = "0.1.0"
description = ""
authors = ["andrejmaznin <andrejmaznin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
